alpine-initcontainer-test.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: alpine 
  creationTimestamp: null
  labels:
    app: alpine
spec:
  containers:
    - name: alpine 
      image: alpine
      imagePullPolicy: IfNotPresent
      command: ["sh", "-c", "until /script/wait-for-it.sh -t 0 postgres:5432; do echo waiting for db; sleep 2; done"]
      volumeMounts:
        - name: script
          mountPath: /script/wait-for-it.sh
          subPath: wait-for-it.sh
  volumes:
    - name: script
      configMap:
        name: wait-for-it
        defaultMode: 0777
  restartPolicy: Never
