busybox.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox 
  creationTimestamp: null
  labels:
    app: busybox
spec:
  containers:
   - name: busybox 
     image: busybox 
     command: 
       - sleep
       - "86400"
     imagePullPolicy: IfNotPresent
  restartPolicy: Never
