gorestapi-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-ingress-publicip
  annotations:
    service.citrix.com/frontend-ip: '185.55.177.199'
  labels:
    name: haproxy-ingress-publicip
  namespace: ingress-controller
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    run: haproxy-ingress
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
