gorestapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: gorestapi 
  name: gorestapi 
  namespace: default
spec:
  ports:
  - name: "3000"
    port: 3000 
    targetPort: 3000 
  selector:
    app: gorestapi 
#  type: ClusterIP 
status: {}
