haproxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-ingress-publicip
  labels:
    name: haproxy-ingress-publicip
  namespace: ingress-controller
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: "10.0.1.248"
  type: LoadBalancer
  selector:
    run: haproxy-ingress
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 80
