gorestapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gorestapi-ingress
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - http:
      paths:
      - path: /ping
        pathType: Prefix 
        backend:
          service:
            name: gorestapi 
            port:
              number: 8080
      - path: /newsfeed
        pathType: Prefix
        backend:
          service:
            name: gorestapi
            port:
              number: 8080
status:
  loadBalancer: {}
